force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FWRBus__c.field-meta.xml
<CustomField>
    <fullName>FSM_FWRBus__c</fullName>
    <description>Created as part of SFS-6005</description>
    <label>Bus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Bus route</fullName>
            </value>
            <value>
                <fullName>Bus Stop</fullName>
            </value>
            <value>
                <fullName>Bus Lane</fullName>
            </value>
            <value>
                <fullName>Bus stop-Lane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>