force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FWRCommsType__c.field-meta.xml
<CustomField>
    <fullName>FSM_FWRCommsType__c</fullName>
    <description>Created as part of SFS-6005</description>
    <label>Comm&apos;s Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Letter required</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Noise Letters required</fullName>
            </value>
            <value>
                <fullName>Advance Warn</fullName>
            </value>
            <value>
                <fullName>Restricted Access</fullName>
            </value>
            <value>
                <fullName>Noise</fullName>
            </value>
            <value>
                <fullName>Interruption to supply</fullName>
            </value>
            <value>
                <fullName>Pre-coning</fullName>
            </value>
            <value>
                <fullName>Work awareness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>