force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FWRCycle__c.field-meta.xml
<CustomField>
    <fullName>FSM_FWRCycle__c</fullName>
    <description>Created as part of SFS-6005</description>
    <label>Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Cycle Lane</fullName>
            </value>
            <value>
                <fullName>cycle route</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>