force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FWRFootwayWidth__c.field-meta.xml
<CustomField>
    <fullName>FSM_FWRFootwayWidth__c</fullName>
    <description>Created as part of SFS-6005
Updated as part of SFS-8936</description>
    <label>Footway Width (m)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>