force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FWRMethodOfWork__c.field-meta.xml
<CustomField>
    <fullName>FSM_FWRMethodOfWork__c</fullName>
    <description>Created as part of SFS-6005</description>
    <label>Method of work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Excavation</fullName>
            </value>
            <value>
                <fullName>Excavation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>