force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FWRPedestrianLights__c.field-meta.xml
<CustomField>
    <fullName>FSM_FWRPedestrianLights__c</fullName>
    <description>Created as part of SFS-6005</description>
    <label>Pedestrian lights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Pedestrian Light Switch Off</fullName>
            </value>
            <value>
                <fullName>Pelican Crossing</fullName>
            </value>
            <value>
                <fullName>Perm Light Switch Off Zebra Crossing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>