force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FWRPedestrianWalkway__c.field-meta.xml
<CustomField>
    <fullName>FSM_FWRPedestrianWalkway__c</fullName>
    <description>Created as part of SFS-6005</description>
    <label>Pedestrian Walkway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Footway Closed</fullName>
            </value>
            <value>
                <fullName>In road</fullName>
            </value>
            <value>
                <fullName>No Pedestrian walkway required</fullName>
            </value>
            <value>
                <fullName>Pedestrian Footway Boards</fullName>
            </value>
            <value>
                <fullName>Walkway closed diversion</fullName>
            </value>
            <value>
                <fullName>Walkway in the carriageway</fullName>
            </value>
            <value>
                <fullName>Walkway in the footway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>