force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FWRPlanningInformation__c.field-meta.xml
<CustomField>
    <fullName>FSM_FWRPlanningInformation__c</fullName>
    <description>Created as part of SFS-6005</description>
    <label>Planning information/Customer Comms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>