force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FWRRoadType__c.field-meta.xml
<CustomField>
    <fullName>FSM_FWRRoadType__c</fullName>
    <description>Created as part of SFS-6005</description>
    <label>Road Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>