force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FWRSiteComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_FWRSiteComments__c</fullName>
    <description>Created as part of SFS-6005</description>
    <label>Site Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>