force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FWRSpecialFeature__c.field-meta.xml
<CustomField>
    <fullName>FSM_FWRSpecialFeature__c</fullName>
    <description>Created as part of SFS-6005</description>
    <label>Special Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cul De Sac</fullName>
            </value>
            <value>
                <fullName>Dual Carriageway</fullName>
            </value>
            <value>
                <fullName>Fixed Traffic Control</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>On approach to Roundabout</fullName>
            </value>
            <value>
                <fullName>On Roundabout</fullName>
            </value>
            <value>
                <fullName>One Way Street</fullName>
            </value>
            <value>
                <fullName>Pedestrian Crossing</fullName>
            </value>
            <value>
                <fullName>Slip Lane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>