force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FWRTrafficFlow__c.field-meta.xml
<CustomField>
    <fullName>FSM_FWRTrafficFlow__c</fullName>
    <description>Created as part of SFS-6005</description>
    <label>Traffic Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>