force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FWRTrainOrTram__c.field-meta.xml
<CustomField>
    <fullName>FSM_FWRTrainOrTram__c</fullName>
    <description>Created as part of SFS-6005</description>
    <label>Train or Tram</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Train no impact</fullName>
            </value>
            <value>
                <fullName>Train within 200m</fullName>
            </value>
            <value>
                <fullName>Tram no impact</fullName>
            </value>
            <value>
                <fullName>Tram within 200m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>