force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_FWRVisibilityToMenAtWork__c.field-meta.xml
<CustomField>
    <fullName>FSM_FWRVisibilityToMenAtWork__c</fullName>
    <description>Created as part of SFS-6005</description>
    <label>Visbility to Men at Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50m</fullName>
            </value>
            <value>
                <fullName>60m</fullName>
            </value>
            <value>
                <fullName>60m+</fullName>
            </value>
            <value>
                <fullName>Not visible on approach</fullName>
            </value>
            <value>
                <fullName>Not visible on both approaches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>