force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_GridsReferenceX__c.field-meta.xml
<CustomField>
    <fullName>FSM_GridsReferenceX__c</fullName>
    <description>Created as part of SFS-3007</description>
    <label>Grids Reference X</label>
    <length>80</length>
    <type>Text</type>
</CustomField>