force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_HandRails__c.field-meta.xml
<CustomField>
    <fullName>FSM_HandRails__c</fullName>
    <label>Hand Rails (if Present)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Hand Rails</fullName>
            </value>
            <value>
                <fullName>Hand rail good condition no futher work</fullName>
            </value>
            <value>
                <fullName>Hand rail good condition - FOW needed - Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>