force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_HeightOfFall__c.field-meta.xml
<CustomField>
    <fullName>FSM_HeightOfFall__c</fullName>
    <description>Created as a part of SFS-4803</description>
    <inlineHelpText>This is the height of the top of the pipe from the furthest point of surface below (water/ground etc.) 	
This is based on the assumption that the injury sustained is likely to be greater the distance fallen and does not consider whether the ground is soft or hard. 	
Also this assumes that any security if present is breached, so worst case scenario.</inlineHelpText>
    <label>Height of fall (likelihood of Injury) ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 0.5m</fullName>
            </value>
            <value>
                <fullName>0.5m to 1.0m</fullName>
                <label>0.5 to 1.0m</label>
            </value>
            <value>
                <fullName>1.0m to 2.0m</fullName>
            </value>
            <value>
                <fullName>2.0m to 4.0m</fullName>
            </value>
            <value>
                <fullName>Over 4.0m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>