force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_HeightOfFallComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_HeightOfFallComments__c</fullName>
    <description>Created as a part of SFS-4803</description>
    <label>Height of fall Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>