force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_HouseName__c.field-meta.xml
<CustomField>
    <fullName>FSM_HouseName__c</fullName>
    <description>Created as a part of SFS-4790</description>
    <label>House Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>