force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_HouseNo__c.field-meta.xml
<CustomField>
    <fullName>FSM_HouseNo__c</fullName>
    <description>Created as part of SFS-4790</description>
    <label>House No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>