force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_IncidentDateTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_IncidentDateTime__c</fullName>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incident DateTime</label>
    <type>DateTime</type>
</CustomField>