force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_INFRAFWRActivityType__c.field-meta.xml
<CustomField>
    <fullName>FSM_INFRAFWRActivityType__c</fullName>
    <description>SFS-3010</description>
    <inlineHelpText>Select One</inlineHelpText>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Utility Repair and Maintenance Works</fullName>
            </value>
            <value>
                <fullName>Utility Asset Works</fullName>
            </value>
            <value>
                <fullName>Optional permit no fee</fullName>
            </value>
            <value>
                <fullName>Interim to perm reinstatement</fullName>
            </value>
            <value>
                <fullName>Remedial Works</fullName>
            </value>
            <value>
                <fullName>Diversionary works</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>