force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_IsTheJobUrgent__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsTheJobUrgent__c</fullName>
    <description>SFS-3010</description>
    <label>Is the job urgent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Dangerous reinstatement</fullName>
            </value>
            <value>
                <fullName>Pollution / trace pollution / possible pollution</fullName>
            </value>
            <value>
                <fullName>Clear blockage to prevent / halt flooding or pollution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>