force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_IsTheLocationTrafficSensitive__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsTheLocationTrafficSensitive__c</fullName>
    <description>SFS-3010</description>
    <label>Is the location traffic sensitive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>