force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_JobCompleted__c.field-meta.xml
<CustomField>
    <fullName>FSM_JobCompleted__c</fullName>
    <description>Created as part of SFS-3007</description>
    <label>Job completed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>