force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_JobReference__c.field-meta.xml
<CustomField>
    <fullName>FSM_JobReference__c</fullName>
    <description>Created as part of SFS-4810</description>
    <formula>FSM_WorkOrder__r.FSM_OrderNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STW Job Reference</label>
    <type>Text</type>
</CustomField>