force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_JobTracedAndMarked__c.field-meta.xml
<CustomField>
    <fullName>FSM_JobTracedAndMarked__c</fullName>
    <description>SFS-3010</description>
    <label>Is job traced and marked?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>