force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_LampSupportRemovalRequired__c.field-meta.xml
<CustomField>
    <fullName>FSM_LampSupportRemovalRequired__c</fullName>
    <description>SFS-3010</description>
    <inlineHelpText>Please speak to line manager for authorisation</inlineHelpText>
    <label>Lamp support/removal required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>