force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_LeakageTechniques__c.field-meta.xml
<CustomField>
    <fullName>FSM_LeakageTechniques__c</fullName>
    <description>Created as a part of SFS-5321</description>
    <label>Leakage Techniques used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Sounding</fullName>
            </value>
            <value>
                <fullName>Correlation</fullName>
            </value>
            <value>
                <fullName>Pipe Tracing</fullName>
            </value>
            <value>
                <fullName>Enigma</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>