force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_LineItemCount__c.field-meta.xml
<CustomField>
    <fullName>FSM_LineItemCount__c</fullName>
    <description>SFI-2041</description>
    <label>Line Item Count</label>
    <summaryForeignKey>FSM_InfraDataCaptureLineItem2__c.FSM_InfraDataCaptureForm2__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>