force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_Location__c.field-meta.xml
<CustomField>
    <fullName>FSM_Location__c</fullName>
    <description>SFS-3010</description>
    <inlineHelpText>This Information is visible to Highways Authority on the notice and must contain the correct address information</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Highway</fullName>
            </value>
            <value>
                <fullName>Private Land</fullName>
            </value>
            <value>
                <fullName>Off Highway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>