force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_LoggerNameLoc__c.field-meta.xml
<CustomField>
    <fullName>FSM_LoggerNameLoc__c</fullName>
    <description>Created as a part of SFS-5321</description>
    <label>Logger Name/Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>