force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_LoggersAffectedNearby__c.field-meta.xml
<CustomField>
    <fullName>FSM_LoggersAffectedNearby__c</fullName>
    <label>Loggers affected in vicinity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>