force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_LoggerSerialNo__c.field-meta.xml
<CustomField>
    <fullName>FSM_LoggerSerialNo__c</fullName>
    <description>Created as a part of SFS-5321</description>
    <label>Serial Number of Logger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>