force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_Medium__c.field-meta.xml
<CustomField>
    <fullName>FSM_Medium__c</fullName>
    <defaultValue>&quot;MOBI&quot;</defaultValue>
    <description>SFI-1238, Default value is set to MOBI</description>
    <label>Medium</label>
    <length>15</length>
    <type>Text</type>
</CustomField>