force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_Monday__c.field-meta.xml
<CustomField>
    <fullName>FSM_Monday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-3010</description>
    <label>Monday</label>
    <type>Checkbox</type>
</CustomField>