force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_Night__c.field-meta.xml
<CustomField>
    <fullName>FSM_Night__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-6005</description>
    <label>Night</label>
    <type>Checkbox</type>
</CustomField>