force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_NoEntrytoWater__c.field-meta.xml
<CustomField>
    <fullName>FSM_NoEntrytoWater__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-4810</description>
    <label>No Entry to Water (at time of visit)</label>
    <type>Checkbox</type>
</CustomField>