force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_NoGiveReason__c.field-meta.xml
<CustomField>
    <fullName>FSM_NoGiveReason__c</fullName>
    <description>Created as part of SFS-3007
updated as part of 7916</description>
    <label>No - if no why?</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>