force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_NoOfLineItemsEformsOfSameType__c.field-meta.xml
<CustomField>
    <fullName>FSM_NoOfLineItemsEformsOfSameType__c</fullName>
    <description>SFS-5321</description>
    <label>No of line items EForms of same type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>