force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_NotificationNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_NotificationNumber__c</fullName>
    <description>SFS-3010</description>
    <formula>FSM_WorkOrder__r.FSM_NotificationNumber__c</formula>
    <label>Notification Number</label>
    <type>Text</type>
</CustomField>