force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_OccupiersCity__c.field-meta.xml
<CustomField>
    <fullName>FSM_OccupiersCity__c</fullName>
    <description>SFS-3010</description>
    <label>Occupiers&apos;s City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>