force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_OccupiersHouseNo__c.field-meta.xml
<CustomField>
    <fullName>FSM_OccupiersHouseNo__c</fullName>
    <description>SFS-3010</description>
    <inlineHelpText>This Information is visible to Highways Authority on the notice and must contain the correct address information</inlineHelpText>
    <label>Occupier&apos;s House No.</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>