force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_OccupiersName__c.field-meta.xml
<CustomField>
    <fullName>FSM_OccupiersName__c</fullName>
    <description>SFS-3010</description>
    <label>Occupiers Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>