force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_OccupiersPostcode__c.field-meta.xml
<CustomField>
    <fullName>FSM_OccupiersPostcode__c</fullName>
    <description>SFS-3010</description>
    <label>Occupier&apos;s Postcode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>