force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_OccupiersTelephoneNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_OccupiersTelephoneNumber__c</fullName>
    <description>SFS-3010
Updated as part of SFS-6577</description>
    <label>Occupier&apos;s Telephone No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>