force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_OperationNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_OperationNumber__c</fullName>
    <description>SFS-3010</description>
    <formula>FSM_WorkOrder__r.FSM_OperationNumber__c</formula>
    <label>Operation Number</label>
    <type>Text</type>
</CustomField>