force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_OutfallBenching__c.field-meta.xml
<CustomField>
    <fullName>FSM_OutfallBenching__c</fullName>
    <description>Created as part of SFS-4811</description>
    <label>Flap Check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good Condition</fullName>
            </value>
            <value>
                <fullName>Moderate Condition</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>