force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_OutfallExp__c.field-meta.xml
<CustomField>
    <fullName>FSM_OutfallExp__c</fullName>
    <label>Is this flow expected for this site?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>