force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_OutfallGolden__c.field-meta.xml
<CustomField>
    <fullName>FSM_OutfallGolden__c</fullName>
    <description>Created as Part of SFS-4811</description>
    <label>Has Golden Measure met for this activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Green</fullName>
            </value>
            <value>
                <fullName>No – Amber</fullName>
            </value>
            <value>
                <fullName>No – Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>