force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_OutfallMaintCorrect__c.field-meta.xml
<CustomField>
    <fullName>FSM_OutfallMaintCorrect__c</fullName>
    <label>Grounds Maintenance Corrective</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Overgrown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>