force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_OutfallRef__c.field-meta.xml
<CustomField>
    <fullName>FSM_OutfallRef__c</fullName>
    <description>Created as part of SFS-4811</description>
    <label>Outfall reference number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>